[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cell-lab"
version = "0.1.0"
description = "Interactive cell metabolism simulator with an optional reinforcement learning environment."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Emre + Codex" }
]
dependencies = [
]

[project.optional-dependencies]
rl = [
  "gymnasium>=0.29",
  "stable-baselines3>=2.3",
  "torch>=2.2",
]

[tool.setuptools]
packages = ["cell_lab"]
